Add blueprint of the workshop
- AWS Lambda to do serverless compute
- API Gateway to expose a HTTP api
- DynamoDB to store stuff

TODO:
Build a frontend to visualize progress in the backend.

--- a/workshops/aws-lambda/index.html
+++ b/workshops/aws-lambda/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>AWS Lambda</title>
+    <title>Serverless on AWS</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="description" content="Description">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -35,7 +35,7 @@
     }, 2000);
 
     window.$docsify = {
-        name: 'AWS Lambda',
+        name: 'Serverless on AWS',
         repo: 'https://github.com/RobKenis/rob-kenis-dot-com'
     }
 </script>
